--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ django
 south
 django-tinymce
 git+https://github.com/sociogenetics/xendor.git#egg=xendor
-git+https://github.com/sociogenetics/mpttadmin.git#egg=mpttadmin
-git+https://github.com/barbuza/supercaptcha#egg=supercaptcha
+#git+https://github.com/sociogenetics/mpttadmin.git#egg=mpttadmin
+#git+https://github.com/barbuza/supercaptcha#egg=supercaptcha
 django-mptt
 django-filebrowser
 django-grappelli
+django-bootstrap3
+raven
